// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for Validate Mapping cell Ensure that when api error is passed api error is displayed 1`] = `
<div>
  <p
    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--intent-danger"
    style="--text-line-clamp: 1;"
  >
    mockError
  </p>
</div>
`;

exports[`Tests for Validate Mapping cell Ensure that when error state is passed error state is displayed 1`] = `
<div>
  <div
    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--intent-danger"
      style="display: flex; align-items: center;"
    >
      <span
        class="bp3-icon bp3-icon-warning-sign StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-red500"
        icon="warning-sign"
      >
        <svg
          data-icon="warning-sign"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            warning-sign
          </desc>
          <path
            d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      Validation failed
    </p>
    <button
      class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main StyledProps--color StyledProps--color-blue500"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-refresh StyledProps--main StyledProps--padding-right-xsmall"
        icon="refresh"
      >
        <svg
          data-icon="refresh"
          height="12"
          viewBox="0 0 16 16"
          width="12"
        >
          <desc>
            refresh
          </desc>
          <path
            d="M14.99 6.99c-.55 0-1 .45-1 1 0 3.31-2.69 6-6 6-1.77 0-3.36-.78-4.46-2h1.46c.55 0 1-.45 1-1s-.45-1-1-1h-4c-.55 0-1 .45-1 1v4c0 .55.45 1 1 1s1-.45 1-1v-1.74a7.95 7.95 0 006 2.74c4.42 0 8-3.58 8-8 0-.55-.45-1-1-1zm0-7c-.55 0-1 .45-1 1v1.74a7.95 7.95 0 00-6-2.74c-4.42 0-8 3.58-8 8 0 .55.45 1 1 1s1-.45 1-1c0-3.31 2.69-6 6-6 1.77 0 3.36.78 4.46 2h-1.46c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1v-4c0-.55-.45-1-1-1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        Retry
      </span>
    </button>
  </div>
   
</div>
`;

exports[`Tests for Validate Mapping cell Ensure that when in progress is passed spinner is displayed 1`] = `
<div>
  <p
    class="StyledProps--font StyledProps--main StyledProps--intent-primary"
    style="display: flex; align-items: center;"
  >
    <span
      class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-blue500"
      data-icon="steps-spinner"
    >
      <svg
        height="16"
        viewBox="0 0 128 128"
        width="16"
      >
        <g>
          <path
            d="M122.5 69.25H96.47a33.1 33.1 0 000-10.5h26.05a5.25 5.25 0 010 10.5z"
            fill="#ff8e02"
          />
          <path
            d="M112.04 97.83L89.47 84.8a33.1 33.1 0 005.25-9.1l22.57 13.03a5.25 5.25 0 01-5.28 9.1zM88.68 117.35L75.65 94.78a33.1 33.1 0 009.1-5.25l13.02 22.57a5.25 5.25 0 11-9.1 5.25zM58.7 122.57V96.5a33.1 33.1 0 0010.5 0v26.07a5.25 5.25 0 01-10.5 0zM30.1 112.1l13.04-22.57a33.1 33.1 0 009.1 5.25L39.2 117.35a5.25 5.25 0 11-9.1-5.25zM10.6 88.74L33.16 75.7a33.1 33.1 0 005.25 9.1L15.88 97.83a5.25 5.25 0 11-5.25-9.1z"
            fill="#ffddb3"
            fill-opacity="0.3"
          />
          <path
            d="M5.37 58.75h26.06a33.1 33.1 0 000 10.5H5.37a5.25 5.25 0 010-10.5z"
            fill="#ffd29a"
            fill-opacity="0.4"
          />
          <path
            d="M15.85 30.17L38.4 43.2a33.1 33.1 0 00-5.24 9.1L10.6 39.25a5.25 5.25 0 115.25-9.1z"
            fill="#ffc680"
            fill-opacity="0.5"
          />
          <path
            d="M39.2 10.65l13.03 22.57a33.1 33.1 0 00-9.1 5.25l-13-22.57a5.25 5.25 0 119.1-5.25z"
            fill="#ffbb67"
            fill-opacity="0.6"
          />
          <path
            d="M69.2 5.43V31.5a33.1 33.1 0 00-10.5 0V5.42a5.25 5.25 0 1110.5 0z"
            fill="#ffb04d"
            fill-opacity="0.7"
          />
          <path
            d="M97.77 15.9L84.75 38.47a33.1 33.1 0 00-9.1-5.25l13.03-22.57a5.25 5.25 0 119.1 5.25z"
            fill="#ffa535"
            fill-opacity="0.8"
          />
          <path
            d="M117.3 39.26L94.7 52.3a33.1 33.1 0 00-5.25-9.1l22.57-13.03a5.25 5.25 0 015.25 9.1z"
            fill="#ff991b"
            fill-opacity="0.9"
          />
          <animatetransform
            attributeName="transform"
            calcMode="discrete"
            dur="1200ms"
            repeatCount="indefinite"
            type="rotate"
            values="0 64 64;30 64 64;60 64 64;90 64 64;120 64 64;150 64 64;180 64 64;210 64 64;240 64 64;270 64 64;300 64 64;330 64 64"
          />
        </g>
      </svg>
    </span>
    Verification in progress
  </p>
</div>
`;

exports[`Tests for Validate Mapping cell Ensure that when no data is available minus is displayed 1`] = `
<div>
  <p
    class="StyledProps--font StyledProps--main clickableText"
    style="display: flex; align-items: center;"
  >
    <span
      class="bp3-icon bp3-icon-small-minus StyledProps--main StyledProps--padding-right-xsmall"
      icon="small-minus"
    >
      <svg
        data-icon="small-minus"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      >
        <desc>
          small-minus
        </desc>
        <path
          d="M11 7H5c-.55 0-1 .45-1 1s.45 1 1 1h6c.55 0 1-.45 1-1s-.45-1-1-1z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    No data
  </p>
</div>
`;

exports[`Tests for Validate Mapping cell Ensure that when no status is passed nothing is displayed 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  />
</div>
`;

exports[`Tests for Validate Mapping cell Ensure that when success is passed check is displayed 1`] = `
<div>
  <p
    class="StyledProps--font StyledProps--main clickableText StyledProps--intent-success"
    style="display: flex; align-items: center;"
  >
    <span
      class="bp3-icon bp3-icon-tick StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
      icon="tick"
    >
      <svg
        data-icon="tick"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      >
        <desc>
          tick
        </desc>
        <path
          d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    Validation passed
  </p>
</div>
`;
